# jsii

./: Cargo.toml  README.md  package.json  runtime-architecture.monopic
deno/: Cargo.toml  build.rs
deno/src/: lib.rs
deno/src/compat/: mod.rs
java/: pom.xml
java/src/main/java/software/amazon/jsii/: JsiiClient.java  JsiiEngine.java  JsiiObject.java  JsiiObjectRef.java  JsiiSerializable.java  JsiiVersion.java  Kernel.java  NativeType.java  NativeUtils.java
java/src/main/java/software/amazon/jsii/api/: GetRequest.java
java/src/main/resources/jni/jsii/: macos-x86_64.dylib
java/src/test/java/software/amazon/example/: CdkApp.java
jni/: Cargo.toml
jni/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  main.cjs
tools/jsii-compliance/: package.json
