[package]
name = "jsii-jni"
version = "0.1.0-dev.0"
license = "Apache-2.0"
authors = ["Amazon Web Services, Inc <aws-jsii@amazon.com>"]

edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]
name = "jsii"

[dependencies]
anyhow = "1.0.55"
jni = "0.19.0"
jsii-kernel = { path = "../kernel" }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["rt"] }
uuid = "0.8.2"
